--- a/cardiovascular_risk.ipynb
+++ b/cardiovascular_risk.ipynb
@@ -4681,7 +4681,7 @@
    "metadata": {},
    "source": [
     "### Conclusion:\n",
-    "* After doing cross validation(cv=5), Random Forest and Logistic Regression are the top-performing models for predicting whether a patient has a 10-year risk of future coronary heart disease (CHD)"
+    "* After doing cross validation(cv=5), Random Forest and Logistic Regression are the top-performing models for predicting whether a patient has a 10-year risk of future coronary heart disease (CHD), excluding SVC because its Precision and Recall scores are very low"
    ]
   }
  ],
